syntax = "proto3";

package beers;

enum Status {
	OK = 0;
	BAD = 1;
}

message BeerAddResponse {
	int32 id = 1;
	string name = 2;
	Status status = 3;
	string err_msg = 4;
}

message BeerAddRequest {
	string name = 1;
}


service Beers {
	rpc Add(BeerAddRequest) returns (BeerAddResponse) {}
}